<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/default_padding"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools">
    <ImageView android:layout_width="@android:dimen/thumbnail_width"
               android:layout_height="@android:dimen/thumbnail_height"
               android:id="@+id/imageViewicon"
               android:layout_gravity="center_horizontal"
               app:srcCompat="@drawable/ic_profile_image"/>
<TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textViewname"
          android:layout_gravity="center_horizontal"
          android:textAppearance="@style/TextAppearance.AppCompat.Headline"
          tools:text="@string/hint_name"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewmeat"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:drawableStart="@drawable/ic_met_at"
            android:gravity="center"
            tools:text="@string/hint_me_at"/>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/cardview_light_background">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/buttoncontact"
                android:layout_marginBottom="@dimen/default_margin"
    android:drawableStart="@drawable/ic_contact"
    android:drawablePadding="@dimen/default_margin"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    android:hint="@string/hint_contact"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/TextAppearance.AppCompat.Large"
              android:id="@+id/textViewEmail"
              android:layout_below="@id/textViewmeat"
              android:layout_toEndOf="@id/imageViewicon"
              android:drawableStart="@drawable/ic_gmail"
              android:layout_gravity="center_vertical"
              android:padding="@dimen/drawable_padding"
              android:lines="1"
              tools:text="@string/email"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/TextAppearance.AppCompat.Large"
              android:id="@+id/facebook"
              android:layout_below="@id/facebook"
              android:layout_toEndOf="@id/imageViewicon"
              android:drawableStart="@drawable/ic_facebook"
              android:layout_gravity="center_vertical"
              android:padding="@dimen/drawable_padding"
              android:lines="1"
              tools:text="@string/facebook"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/TextAppearance.AppCompat.Large"
              android:id="@+id/twiter"
              android:layout_below="@id/textViewmeat"
              android:layout_toEndOf="@id/imageViewicon"
              android:drawableStart="@drawable/ic_twitter"
              android:layout_gravity="center_vertical"
              android:padding="@dimen/drawable_padding"
              android:lines="1"
              tools:text="@string/twiter"/>

</LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>