<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:layout_margin="@dimen/default_margin"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
>
    <RelativeLayout
            android:padding="@dimen/default_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView android:layout_width="@dimen/profile_image_size"
                   android:layout_height="@dimen/profile_image_size"
                   android:layout_centerVertical="true"
                   android:layout_marginEnd="@dimen/default_margin"
                   app:srcCompat="@drawable/ic_profile_image"
                   android:id="@+id/imageViewicon"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewname"
                android:layout_toEndOf="@+id/imageViewicon"
                android:lines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:text="@string/hint_name"/>
<TextView android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewmeat"
          android:layout_below="@id/textViewname"
          android:layout_toEndOf="@id/imageViewicon"
          android:drawableStart="@drawable/ic_met_at"
          android:gravity="center_vertical"
          android:lines="1"
          tools:text="@string/hint_me_at"
/>
    <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Small"
            android:id="@+id/buttoncontact"
            android:layout_below="@id/textViewmeat"
            android:layout_toEndOf="@id/imageViewicon"
            android:drawableStart="@drawable/ic_contact"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/drawable_padding"
            android:lines="1"
            tools:text="@string/hint_contact"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="@style/Widget.AppCompat.Button.Small"
                  android:id="@+id/email"
                  android:layout_below="@id/textViewmeat"
                  android:layout_toEndOf="@id/imageViewicon"
                  android:drawableStart="@drawable/ic_gmail"
                  android:layout_gravity="center_vertical"
                  android:padding="@dimen/drawable_padding"
                  android:lines="1"
                  tools:text="@string/facebook"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="@style/Widget.AppCompat.Button.Small"
                  android:id="@+id/facebook"
                  android:layout_below="@id/textViewmeat"
                  android:layout_toEndOf="@id/imageViewicon"
                  android:drawableStart="@drawable/ic_facebook"
                  android:layout_gravity="center_vertical"
                  android:padding="@dimen/drawable_padding"
                  android:lines="1"
                  tools:text="@string/hint_contact"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>